[package]
name = "packpulseBE"
version = "0.1.0"
edition = "2021"
default-run = "packpulseBE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tower-http = { version = "0.4", features = ["cors", "add-extension", "trace"] }
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
sqlx = { version = "0.7.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
bcrypt = "0.15.0"
jsonwebtoken = "9.2.0"
axum-macros = "0.4.1"
cookie = "0.18.0"
axum-extra = "0.9.2"

